<resources>
    <string name="app_name">Cuisina</string>
    <string name="food_stocks">Food Stocks</string>
    <string name="recipes">Recipes</string>
    <string name="clock">Clock</string>
    <string name="calendar">Calendar</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>

    <string name="insert_picture">Insert Picture</string>
    <string name="fruits">Fruits</string>
    <string name="meat">Meat</string>
    <string name="dairy">Dairy</string>
    <string name="vegetable">Vegetable</string>
    <string name="condiments">Condiments</string>
    <string name="ret">Back</string>

    <string name="title_activity_fruits">ScrollingActivity</string>
    <string name="title_activity_meat">ScrollingActivity</string>
    <string name="title_activity_dairy">ScrollingActivity</string>
    <string name="title_activity_vegetable">ScrollingActivity</string>
    <string name="title_activity_condiments">ScrollingActivity</string>

    <string name="ingredient_name">Ingredient Name</string>
    <string name="quantity">Quantity</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="add">Add</string>
    <string name="title_activity_xdairyview">xDairyview</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_vcondimentsmain">vCondimentsmain</string>
</resources>